--- a/overlay/packages/apps/Settings/res/values/rr_strings.xml
+++ b/overlay/packages/apps/Settings/res/values/rr_strings.xml
@@ -11,5 +11,5 @@
     limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="rr_maintainer_summary">Ruturaj Kadam</string>
+    <string name="rr_maintainer_summary">Mendik</string>
 </resources>
