--- a/overlay/packages/apps/DerpQuest/res/values/derpquest_strings.xml
+++ b/overlay/packages/apps/DerpQuest/res/values/derpquest_strings.xml
@@ -13,6 +13,6 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="maintainer_name">Gustavo Mendes</string>
-    <string name="maintainer_telegram">https://t.me/GustavoMends</string>
+    <string name="maintainer_telegram">Mendik</string>
 
 </resources>
